syntax = "proto3";

option go_package = "github.com/stephenjayakar/go-box/gobox";

package gobox;

service GoBox {
    rpc Meow(MeowRequest) returns (MeowResponse) {}
}

message MeowRequest {
    string name = 1;
}

message MeowResponse {
    string meow = 1;
}